# 0trace

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LEGAL_INFORMATION.md  LICENSE.md  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt  start_linux.sh  start_macos.sh  start_windows.bat
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/actions/add-issue-to-project/: action.yml
.github/workflows/: action.yml  add-issue-to-project.yml.yml  checkmarx.yml
Otrace/: __init__.py
Otrace/gui/: __init__.py  cache_error.py  invalid_error.py  legal_template.txt  pycache.py  startup_warning.py  startup_warning.py.py  startup_warning_query.py  welcome.py
Otrace/local/etc/: hostname  passwd  shadow  sudoers
Otrace/local/home/pengu/cache/: aliases
Otrace/programs/: cmd.py
Otrace/programs/apt/: sources
Otrace/remote/: net.info
Otrace/scripts/: start_linux.sh  start_macos.sh  start_windows.bat
Otrace/sys/: __init__.py  accnt_mngr.py  file_mngr.py  gui.py  venv_mngr.py
Otrace_venv/: pyvenv.cfg
